# sync-clipboard

./: Cargo.toml  README.md  README.zh.md  makefile
.github/workflows/: release.yml
src/: clipboard.rs  clipboard.rs.bk  main.rs  message.rs  sync.rs  transport.rs
